add geofencing. I cant full test yet because my phone uses private ip (#5)
